[gd_scene load_steps=3 format=3 uid="uid://cdjjx6mm8qopn"]

[ext_resource type="Script" uid="uid://ftef78cxo6gq" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://dq3biis8posjn" path="res://scenes/player.tscn" id="1_o5qli"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Player" parent="." instance=ExtResource("1_o5qli")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
